Revert Current Board and Member Groups pages to grid system, and fix spacing on Current Board page

--- a/app/assets/stylesheets/board_members.css.scss
+++ b/app/assets/stylesheets/board_members.css.scss
@@ -2,7 +2,19 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.board-member-row {
+  margin-bottom: 20px;
+}
+
 img.board-photo {
-  width: 300px;
-  height: 450px;
+  width: 285px;
+  height: 425px;
+}
+
+.top-column-header {
+  margin-top: 0;
+}
+
+.top-column-header, .column-header {
+  margin-bottom: 5px;
 }
