--- a/app/assets/stylesheets/member_groups.css.scss
+++ b/app/assets/stylesheets/member_groups.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the MemberGroups controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.member-group-photo {
+  width: 300px;
+  height: 450px;
+}
